[package]
name = "ats-sport-results-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt="0.3"
html5ever = "0.26"
scraper="0.13"
ureq = "2.4.0"
anyhow = "1"
ego-tree="^0.6"
itertools = "0.10.0"
